[project]
name = "downward-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Si Young Byun",email = "siyoung.byun@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
